--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
@@ -22,8 +21,10 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
+                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
+                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
+        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
