--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:iqbal@virginia.edu"><img class = "img-email" src="https://img.favpng.com/5/22/20/computer-icons-envelope-icon-design-mail-logo-png-favpng-pwZ2e4uPp3fex5KKnxNThxpwV.jpg"></a></li>
-                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
+                <li><a href="https://github.com/hishamiqbal"><img class = "img-email" src = "imgages/github.jpg"></a></li>
                 <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
         		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
