--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
 <div class="container">
 	<div style="text-align:center">
-	  <h2>Contact Us</h2>
-	  <p>Swing by for a cup of coffee, or leave us a message:</p>
+	  <h2>Contact Me</h2>
+	  <p>Put your info down below and I will get back to you as soon as I can!:</p>
 	</div>
 	<div class="row">
 	  <div class="column">
-		<img src="/w3images/map.jpg" style="width:100%">
+		<img src="/images/coffee.jpg" style="width:100%">
 	  </div>
 	  <div class="column">
 		<form action="/action_page.php">
