--- a/index.html
+++ b/index.html
@@ -27,35 +27,32 @@
         		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
 		</footer>
+		<div class="container">
+			<div style="text-align:center">
+			  <h2>Contact Me</h2>
+			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
+			</div>
+			<div class="row">
+			  <div class="column">
+				<form action="/action_page.php">
+				  <label for="fname">Name</label>
+				  <input type="text" id="fname" name="firstname" placeholder="Your name">
+				  <label for="lname">Email</label>
+				  <input type="text" id="email" name="email" placeholder="email">
+				  <label for="country">Country</label>
+				  <!--<select id="country" name="country">
+					<option value="australia">Australia</option>
+					<option value="canada">Canada</option>
+					<option value="usa">USA</option>
+				  </select>-->
+				  <label for="subject">Subject</label>
+				  <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
+				  <input type="submit" value="Submit">
+				</form>
+			  </div>
+			</div>
+		  </div>
 	</body>
 </html>
 
 
-<div class="container">
-	<div style="text-align:center">
-	  <h2>Contact Me</h2>
-	  <p>Put your info down below and I will get back to you as soon as I can!:</p>
-	</div>
-	<div class="row">
-	  <div class="column">
-		<img src="/images/coffee.jpg" style="width:100%">
-	  </div>
-	  <div class="column">
-		<form action="/action_page.php">
-		  <label for="fname">First Name</label>
-		  <input type="text" id="fname" name="firstname" placeholder="Your name..">
-		  <label for="lname">Last Name</label>
-		  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-		  <label for="country">Country</label>
-		  <select id="country" name="country">
-			<option value="australia">Australia</option>
-			<option value="canada">Canada</option>
-			<option value="usa">USA</option>
-		  </select>
-		  <label for="subject">Subject</label>
-		  <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-		  <input type="submit" value="Submit">
-		</form>
-	  </div>
-	</div>
-  </div>
