--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</ul>
 		</footer>
 		<div class="container">
-			<div style="text-align:center">
+			<div style="text-align:justify">
 			  <h2>Contact Me</h2>
 			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
 			</div>
