--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I am Hisham Iqbal!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm currently studying Economics and Computer Science at The University of Virginia. Read more about my experiences and personal musings on the various pages. If you would like to reach out, please fill the contact form below! </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
@@ -28,7 +28,7 @@
 			</ul>
 		</footer>
 		<div class="container">
-			<div style="text-align:justify">
+			<div style="text-align:center">
 			  <h2>Contact Me</h2>
 			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
 			</div>
