--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
 			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
 			</div>
 			<div class="row">
+				<div style="text-align:center"></div>
 			  <div class="column">
 				<form action="/action_page.php">
 				  <label for="fname">Name</label>
 				  <input type="text" id="fname" name="firstname" placeholder="Your name">
 				  <label for="lname">Email</label>
 				  <input type="text" id="email" name="email" placeholder="email">
-				  <label for="country">Country</label>
-				  <!--<select id="country" name="country">
+				 <!-- <label for="country">Country</label>
+				  <select id="country" name="country">
 					<option value="australia">Australia</option>
 					<option value="canada">Canada</option>
 					<option value="usa">USA</option>
