--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
 			</div>
 			<div class="row">
-				<div style="text-align:center"></div>
-			  <div class="column">
+			  <div class="column" style="text-align:center"> 
 				<form action="/action_page.php">
 				  <label for="fname">Name</label>
 				  <input type="text" id="fname" name="firstname" placeholder="Your name">
