--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
 		</footer>
-		<div class="container">
+		<div class="container"style="text-align:center">
 			<div style="text-align:center">
 			  <h2>Contact Me</h2>
 			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
