--- a/about.html
+++ b/about.html
@@ -1,31 +1,182 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<title>Hisham Iqbal</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>About me!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
-                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
-                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
-        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
-			</ul>
-		</footer>
-	</body>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162771075-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-162771075-1');
+    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous">
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav navbar-nav-default">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link nav-link-custom-active" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container container-custom">
+      <div class="row">
+        <div class="col-lg-2 col-sm-12">
+          <div class="company-logo-container">
+            <img class="company-logo" src="./assets/ci_logo.jpg"/>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <h5 class="experience-header">Software Engineer Intern</h5>
+          <div class="experience-details-container">
+          <p class="experience-details-item">Custom Ink</p> 
+          <p class="experience-details-item">Aug 2019 - Mar 2020</p>
+          <p class="experience-details-item">🌎 Remote</p> 
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <h6>Stack:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">React</p>
+            <p class="experience-item">Ruby on Rails</p>
+            <p class="experience-item">PostgreSQL</p>
+          </div>
+          <h6>Tools:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">New Relic</p>
+            <p class="experience-item">SendGrid API</p>
+          </div>
+          <p>Continued working remotely while attending school. Developed production features using React, Ruby on Rails and leveraged tools such as New Relic to identify bottlenecks in the application.</p>
+        </div>
+      </div>
+      <hr class="experience-horizontal-line"/>
+      <div class="row">
+        <div class="col-lg-2 col-sm-12">
+          <div class="company-logo-container">
+            <img class="company-logo" src="./assets/ci_logo.jpg"/>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <h5 class="experience-header">Software Engineer Intern</h5>
+          <div class="experience-details-container">
+          <p class="experience-details-item">Custom Ink</p> 
+          <p class="experience-details-item">May 2019 - Aug 2019</p>
+          <p class="experience-details-item">🏢 Fairfax, VA</p> 
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <h6>Stack:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">React</p>
+            <p class="experience-item">Ruby on Rails</p>
+            <p class="experience-item">PostgreSQL</p>
+          </div>
+          <h6>Tools/Frameworks:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">New Relic</p>
+            <p class="experience-item">SendGrid API</p>
+          </div>
+          <p>Joined a team working in a start-up like environment developing a new Custom Ink product. Worked on real production features using React, Ruby on Rails and third-party APIs. Wrote unit tests and tested my features in a staging environent before deploying to production.</p>
+        </div>
+      </div>
+      <hr class="experience-horizontal-line"/>
+      <div class="row">
+        <div class="col-lg-2 col-sm-12">
+          <div class="company-logo-container">
+            <img class="company-logo" src="./assets/pf_logo.png"/>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <h5 class="experience-header">Software Engineer Intern</h5>
+          <div class="experience-details-container">
+          <p class="experience-details-item">Panafold</p> 
+          <p class="experience-details-item">May 2018 - Aug 2018</p>
+          <p class="experience-details-item">🏢 San Francisco, CA</p> 
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <h6>Stack:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">React</p>
+            <p class="experience-item">Node</p>
+            <p class="experience-item">PostgreSQL</p>
+          </div>
+          <h6>Tools/Frameworks:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">Electron</p>
+            <p class="experience-item">WebSockets</p>
+            <p class="experience-item">Nginx</p>
+            <p class="experience-item">Redis</p>
+          </div>
+          <p>Spend the summer working with a team developing a software platform to enable better collaboration between architects and their clients. Used Node, Express, and Redis to create a server middleware to intercept HTTP requests and update users in real-time via the WebSocket protocol. Created reusable React components to display the real-time data to the user across an Electron desktop application.</p>
+        </div>
+      </div>
+      <hr class="experience-horizontal-line"/>
+      <div class="row">
+        <div class="col-lg-2 col-sm-12">
+          <div class="company-logo-container">
+            <img class="company-logo" src="./assets/lcl_logo.jpeg"/>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <h5 class="experience-header">Software Engineer Intern</h5>
+          <div class="experience-details-container">
+          <p class="experience-details-item">Life Changing Labs Incubator</p> 
+          <p class="experience-details-item">May 2017 - Aug 2017</p>
+          <p class="experience-details-item">🏢 Ithaca, NY</p> 
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <h6>Stack:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">React</p>
+            <p class="experience-item">React Native</p>
+            <p class="experience-item">Node</p>
+            <p class="experience-item">GraphQL</p>
+          </div>
+          <h6>Tools/Frameworks:</h6>
+          <div class="experience-items-container">
+            <p class="experience-item">Docker</p>
+            <p class="experience-item">Ngrok</p>
+          </div>
+          <p>Part of the "Life Changing Labs" summer incubator at Cornell University by joining an early stage startup building smart mechanical furniture. Created a web application using React, Redux, and an Express server integrated with GraphQL to enable users to pre-order the product from the company. Developed a React Native mobile application that would be later used to interact with the hardware prototype.</p>
+        </div>
+      </div>
+    </div>
+    <div id="footer-container">
+      <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
+    </div>
+  </body>
 </html>
