--- a/index.html
+++ b/index.html
@@ -1,4 +1,73 @@
 <html>
+	<head>
+		<title>Hisham Iqbal</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav navbar-nav-default">
+					<li class="nav-item active">
+					  <a class="nav-link nav-link-custom-active" href="index.html">Home<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="experience.html">Experience</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="projects.html">Projects</a>
+					</li>
+				  </ul>
+				</div>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I am Hisham Iqbal!</h1>
+				<p>I'm currently studying Economics and Computer Science at The University of Virginia. Read more about my experiences and personal musings on the various pages. If you would like to reach out, please fill the contact form below! </p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:iqbal@virginia.edu"><img class = "img-email" src="https://img.favpng.com/5/22/20/computer-icons-envelope-icon-design-mail-logo-png-favpng-pwZ2e4uPp3fex5KKnxNThxpwV.jpg"></a></li>
+                <li><a href="https://github.com/hishamiqbal"><img class = "img-email" src = "imgages/github.jpg"></a></li>
+                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
+        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
+			</ul>
+		</footer>
+		<div class="container"style="text-align:center">
+			<div style="text-align:center">
+			  <h2>Contact Me</h2>
+			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
+			</div>
+			<div class="row">
+			  <div class="column" style="text-align:center"> 
+				<form action="/action_page.php">
+				  <label for="fname">Name</label>
+				  <input type="text" id="fname" name="firstname" placeholder="Your name">
+				  <label for="lname">Email</label>
+				  <input type="text" id="email" name="email" placeholder="email">
+				 <!-- <label for="country">Country</label>
+				  <select id="country" name="country">
+					<option value="australia">Australia</option>
+					<option value="canada">Canada</option>
+					<option value="usa">USA</option>
+				  </select>-->
+				  <label for="subject">Subject</label>
+				  <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
+				  <input type="submit" value="Submit">
+				</form>
+			  </div>
+			</div>
+		  </div>
+	</body>
+</html>
+
+<!--
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
@@ -94,4 +163,4 @@
     </div>
   </body>
 </html>
-© 2020 GitHub, Inc.
+-->
