--- a/about.html
+++ b/about.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> About Me!</title>
+		<title>Hisham Iqbal</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Blog!</h1>
+				<p></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:iqbal@virginia.edu"></a></li>
+                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
+                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
+        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
