--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:iqbal@virginia.edu"></a></li>
-                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
+                <li><a href="https://github.com/hishamiqbal">github</a></li>
                 <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
         		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
