--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:iqbal@virginia.edu"><img src="https://img.favpng.com/5/22/20/computer-icons-envelope-icon-design-mail-logo-png-favpng-pwZ2e4uPp3fex5KKnxNThxpwV.jpg"></a></li>
-                <li><a href="https://github.com/hishamiqbal">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
+                <li><a href="https://github.com/hishamiqbal">github</a></li>
                 <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
         		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
 			</ul>
