--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I am Hisham Iqbal!</h1>
-				<p>I'm currently studying Economics and Computer Science at The University of Virginia. Read more about my experiences and personal musings on the various pages. If you would like to reach out, please fill the contact form below! </p>
-    		</div><!-- /.blurb -->
+    		<div class="hero-image">
+				<div class="hero-text">
+				  <h1>I am Hisham Iqbal</h1>
+				  <p>And I'm a Consultant</p>
+				  <p>And I sometimes write</p>
+				</div>
+			</div><!--hero-image-->		  
 		</div><!-- /.container -->
 		<footer>
     		<ul>
