--- a/index.html
+++ b/index.html
@@ -1,157 +1,10 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Hisham Iqbal</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="hero-image">
-				<div class="hero-text">
-				  <h1>I am Hisham Iqbal</h1>
-				  <p>And I'm a Consultant</p>
-				  <p>And I sometimes write</p>
-				</div>
-			</div><!--hero-image-->		  
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
-                <li><a href="https://github.com/hishamiqbal">github</a></li>
-                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
-        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
-			</ul>
-		</footer>
-		<div class="container"style="text-align:center">
-			<div style="text-align:center">
-			  <h2>Contact Me</h2>
-			  <p>Put your info down below and I will get back to you as soon as I can!:</p>
-			</div>
-			<div class="row">
-			  <div class="column" style="text-align:center"> 
-				<form action="/action_page.php">
-				  <label for="fname">Name</label>
-				  <input type="text" id="fname" name="firstname" placeholder="Your name">
-				  <label for="lname">Email</label>
-				  <input type="text" id="email" name="email" placeholder="email">
-				 <!-- <label for="country">Country</label>
-				  <select id="country" name="country">
-					<option value="australia">Australia</option>
-					<option value="canada">Canada</option>
-					<option value="usa">USA</option>
-				  </select>-->
-				  <label for="subject">Subject</label>
-				  <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
-				  <input type="submit" value="Submit">
-				</form>
-			  </div>
-			</div>
-		  </div>
-	</body>
+    <head>
+        <title>Hisham Iqbal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Just testing this works!</h1>
+    </body>
 </html>
-
-<!--
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous">
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav navbar-nav-default">
-          <li class="nav-item active">
-            <a class="nav-link nav-link-custom-active" href="index.html">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="experience.html">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container container-custom">
-      <div class="row">
-        <div class="col-lg-6 col-sm-12">
-          <div id="about-me-image-container">
-            <img id="about-me-image" src="./assets/profile-image.jpg" />
-          </div>
-        </div>
-        <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
-          <h5 id="about-me-heading">Hi, I'm Guillermo 👋</h5>
-          <p id="about-me-parragraph">I'm currently studying computer science at the <span class="about-me-word">University of Virginia</span> and interested in developing my skills as a <span class="about-idme-word">full-stack software engineer</span>. I enjoy working with <span class="about-me-word">React, Node, Ruby on Rails, AWS, etc.</span></p>
-          <div id="about-me-social-logos-container">
-            <a href="https://twitter.com/guillermo_saave" target="_blank">
-              <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
-            </a>
-            <a href="https://github.com/guillermocoding" target="_blank">
-              <img class="about-me-social-logo" src="./assets/github-logo.png"/>
-            </a>
-            <a href="https://www.producthunt.com/@guillermo_saavedra" target="_blank">
-              <img class="about-me-social-logo" src="./assets/product-hunt-logo.png"/>
-            </a>
-            <a href="https://www.linkedin.com/in/guillermosaavedradiaz/" target="_blank">
-              <img class="about-me-social-logo" src="./assets/linkedin-logo.png"/>
-            </a>
-          </div>
-        </div>
-      </div>
-      <hr id="about-me-horizontal-line"/>
-      <div id="contact-form-container">
-        <h5 id="contact-form-header"> Contact me 💬</h5>
-        <form id="contact-form" method="POST" action="https://formspree.io/xrgagpqa">
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Name</label>
-            <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input name="name" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Message</label>
-            <textarea name="message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-          <input id="contact-form-button" type="submit" value="Submit"/>
-        </form>
-      </div>
-    </div>
-    <div id="footer-container">
-      <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
-    </div>
-  </body>
-</html>
--->
