--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Just testing this works!</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="hero">
+                <div class="section-inner">
+                    <img src="hishamiqbal.github.io\images\coffee.jpg" class="profile-img">
+                    <h1>Hi, I'm Hisham Iqbal.</h1>
+                </div>
+			</section>
+			
+            <section id="about">
+                
+			</section>
+			
+            <section id="blog">
+                <div class="section-inner">
+                    <h2>Contact me</h2>
+                    <p>You can find me on:</p>
+                    <ul>
+                        <li><a href="https://twitter.com/llama">Twitter</a></li>
+                        <li><a href="https://www.reddit.com/user/llama">Reddit</a></li>
+                        <li><a href="https://www.instagram.com/llamasporfavor/">Instagram</a></li>
+                    </ul>
+                    <p>Or, you can <a href="mailto:llama@codetheweb.blog">send me an email</a>.</p>
+                </div>
+			</section>
+        </main>
+        <footer>
+            © Copyright Mohammad Hisham Iqbal, 2020
+        </footer>
     </body>
 </html>
