--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="hishamiqbal.github.io\images\coffee.jpg" class="profile-img">
+                    <img src="\images\coffee.jpg" class="profile-img">
                     <h1>Hi, I'm Hisham Iqbal.</h1>
                 </div>
 			</section>
