--- a/blog.html
+++ b/blog.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hisham Iqbal</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Blog!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:iqbal@virginia.edu">email</a></li>
-                <li><a href="https://github.com/hishamiqbal">github</a></li>
-                <li><a href="https://www.facebook.com/HisGoesHam/">facebook</a></li>
-        		<li><a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/">linkedin</a></li>
-			</ul>
-		</footer>
-	</body>
+    <head>
+        <title>Hisham Iqbal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+	        		<li><a href="/about">About</a></li>
+        			<li><a href="/blog">Blog</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="hero">
+                <div class="section-inner">
+                    <img src="\images\coffee.jpg" class="profile-img">
+                    <h1>My Musings</h1>
+                </div>
+			</section>
+        </main>
+        <footer>
+            © Copyright Mohammad Hisham Iqbal, 2020
+        </footer>
+    </body>
 </html>
