--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="/">Home</a></li>
+	        		<li><a href="/about">About</a></li>
+        			<li><a href="/blog">Blog</a></li>
                 </ul>
             </nav>
         </header>
