--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
           <input id="contact-form-button" type="submit" value="Submit"/>
         </form>
       </div>
-    </div>
+	</div>
+	
     <div id="footer-container">
-      <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
-    </div>
+      <p id="footer-content">&copy; 2020 Copyright Mohammad Hisham Iqbal</p>
+	</div> <!--FOOTER-->
+	
   </body>
 </html>
