--- a/index.html
+++ b/index.html
@@ -26,21 +26,16 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav navbar-nav-default">
-          <li class="nav-item active">
-            <a class="nav-link nav-link-custom-active" href="index.html">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="experience.html">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
-          </li>
-        </ul>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<div class="topnav" id="myTopnav">
+		  	<li><a href="/">Home</a></li>
+	     	<li><a href="/about">About</a></li>
+        	<li><a href="/blog">Blog</a></li>
+		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+			<i class="fa fa-bars"></i>
+		  </a>
+		</div>
       </div>
     </nav>
     <div class="container container-custom">
