--- a/index.html
+++ b/index.html
@@ -1,93 +1,21 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous">
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-		<div class="topnav" id="myTopnav">
-		  	<li><a href="/">Home</a></li>
-	     	<li><a href="/about">About</a></li>
-        	<li><a href="/blog">Blog</a></li>
-		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i>
-		  </a>
-		</div>
-      </div>
-    </nav>
-    <div class="container container-custom">
-      <div class="row">
-        <div class="col-lg-6 col-sm-12">
-          <div id="about-me-image-container">
-            <img id="about-me-image" src="./assets/profile-image.jpg" />
-          </div>
-        </div>
-        <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
-          <h5 id="about-me-heading">Hi, I'm Guillermo 👋</h5>
-          <p id="about-me-parragraph">I'm currently studying computer science at the <span class="about-me-word">University of Virginia</span> and interested in developing my skills as a <span class="about-idme-word">full-stack software engineer</span>. I enjoy working with <span class="about-me-word">React, Node, Ruby on Rails, AWS, etc.</span></p>
-          <div id="about-me-social-logos-container">
-            <a href="https://twitter.com/guillermo_saave" target="_blank">
-              <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
-            </a>
-            <a href="https://github.com/guillermocoding" target="_blank">
-              <img class="about-me-social-logo" src="./assets/github-logo.png"/>
-            </a>
-            <a href="https://www.producthunt.com/@guillermo_saavedra" target="_blank">
-              <img class="about-me-social-logo" src="./assets/product-hunt-logo.png"/>
-            </a>
-            <a href="https://www.linkedin.com/in/guillermosaavedradiaz/" target="_blank">
-              <img class="about-me-social-logo" src="./assets/linkedin-logo.png"/>
-            </a>
-          </div>
-        </div>
-      </div>
-      <hr id="about-me-horizontal-line"/>
-      <div id="contact-form-container">
-        <h5 id="contact-form-header"> Contact me 💬</h5>
-        <form id="contact-form" method="POST" action="https://formspree.io/xrgagpqa">
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Name</label>
-            <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input name="name" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Message</label>
-            <textarea name="message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-          <input id="contact-form-button" type="submit" value="Submit"/>
-        </form>
-      </div>
-	</div>
-	
-    <div id="footer-container">
-      <p id="footer-content">&copy; 2020 Copyright Mohammad Hisham Iqbal</p>
-	</div> <!--FOOTER-->
-	
-  </body>
-</html>
+<nav>
+	<ul>
+		<button>🞬</button>
+	  <li> 
+		<!-- link one -->
+		<a href="#aboutMe"> About Me </a>
+	  </li>
+	  <li>
+		<!-- link two -->
+		 <a href="#projects"> Projects </a>
+	  </li>
+	  <li>
+		<!-- link three -->
+		<a href="#cv"> CV </a>
+	  </li>
+	  <li>
+		<!-- link four -->
+		<a href="#contacts"> Contacts </a>
+	  </li>
+	</ul>
+  </nav>
