--- a/index.html
+++ b/index.html
@@ -7,15 +7,38 @@
 	  </li>
 	  <li>
 		<!-- link two -->
-		 <a href="#projects"> Projects </a>
+		 <a href="#projects"> Experience </a>
 	  </li>
 	  <li>
 		<!-- link three -->
-		<a href="#cv"> CV </a>
+		<a href="#cv"> Blog </a>
 	  </li>
 	  <li>
 		<!-- link four -->
-		<a href="#contacts"> Contacts </a>
+		<a href="#contacts"> Contact </a>
 	  </li>
 	</ul>
   </nav>
+
+  <!-- library link -->
+<script src="jquery-3.4.0.min.js"></script>
+
+<!-- script below -->
+<script type="text/javascript">
+
+$(document).ready(function(){
+  /* function called when you click of the button */
+  $("button").click(function(){
+      
+      /* this if else to change the text in the button */
+      if($("button").text() == "☰"){
+       $("button").text("🞬");
+      }else{
+        $("button").text("☰");
+      }
+    
+    /* this function toggle the visibility of our "li" elements */
+    $("li").toggle("slow");
+  });
+});
+</script>
