--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Navigation bar DEMO</title>
+        <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-           <img src="https://codetheweb.blog/assets/img/icon2.png">
+			<!--Icons made by <a href="https://www.flaticon.com/authors/xnimrodx" title="xnimrodx">xnimrodx</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
+           <img src="/images/icon.png">
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Terms of use</a></li>
+                    <li><a href="#">Writings</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
