--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 				  </div>
 			</p>
         </main>
-    </body>
+	</body>
+	<footer>
+		<p>Copyright 2020 Mohammad Hisham Iqbal</p>
+	  </footer>
+	  
 </html>
 
 
