--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </header>
         <main>
             <p>
+              <top>
+                <img src="/images/coffee.jpg" alt="Avatar">
+              </top>
               <hr>
 				<div class="container">
 					<div style="text-align:center">
