--- a/about.html
+++ b/about.html
@@ -10,17 +10,18 @@
                 <ul>
                     <li><a href="/">Home</a></li>
 	        		<li><a href="/about">About</a></li>
-        			<li><a href="/blog">Blog</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="\images\coffee.jpg" class="profile-img">
                     <h1>My Experiences</h1>
                 </div>
-			</section>
+            </section>
+            <hr>
         </main>
         <footer>
             © Copyright Mohammad Hisham Iqbal, 2020
