--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <h1>My Musings</h1>
+                    <h1>Keep Up With Me!</h1>
                 </div>
             </section>
             <hr>
