--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </top>
               <hr>
 				<div class="container">
-					<div style="text-align:center">
+					<div font color= "purple" style="text-align:center">
 					  <h2>Contact Me!</h2>
 					  <p>Swing by for a cup of coffee, or leave us a message:</p>
 					</div>
@@ -37,7 +37,8 @@
 				  </div>
 			</p>
         </main>
-	</body>
+  </body>
+  <hr>
 	<footer>
 		<p>Copyright 2020 Mohammad Hisham Iqbal</p>
 	  </footer>
