--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </top>
               <hr>
 				<div class="container">
-					<div font color= "purple" style="text-align:center">
-					  <h2>Contact Me!</h2>
-					  <p>Swing by for a cup of coffee, or leave us a message:</p>
+					<div style="text-align:center">
+					  <h2><font color="purple">Contact Me!</font></h2>
+					  <p><font color="purple">Swing by for a cup of coffee, or leave us a message:</font></p>
 					</div>
 					<div class="row">
 						<form>      
