--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <main>
             <p>
               <top>
-                
+                <div class="row">
+                  <div class="column"></div>
+                  <div class="column"></div>
+                </div>
                 </top>
               <hr>
 				<div class="container">
