--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
               <top>
                 <div class="row">
                   <div class="column"></div>
+                    <h2> Hello, I'm Hisham! </h2>
+                    <p>I am a current 4th year at the University of Virginia studying Computer Science and Economics. I am enroute to becoming a Consultant for Deloitte. Feel free to browse through this site. </p>
                   <div class="column"></div>
                 </div>
                 </top>
