--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <top>
                 <div class="row">
                   <div class="column">
-                    <h2>Hello, I'm Hisham!</font></h2>
+                    <h2><font color="purple">Hello, I'm Hisham!</font></h2>
                     <p><font color="purple">I am a current 4th year at the University of Virginia studying Computer Science and Economics. I am enroute to becoming a Consultant for Deloitte. Feel free to browse through this site. </font></p>
                   </div>
                   <div class="column">
