--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,9 @@
                 </div>
             </section>
             <hr>
+            <section id="embed">
+                <embed src="helloworld.swf">
+            </section>
         </main>
         <footer>
             © Copyright Mohammad Hisham Iqbal, 2020
