--- a/blog.html
+++ b/blog.html
@@ -21,11 +21,11 @@
                     <h1>My Musings</h1>
                 </div>
             </section>
-            <hr>
             <section id="embed">
-                <embed src="helloworld.swf">
+                <div id="retainable-rss-embed" data-rss="https://medium.com/feed/retainable, https://medium.com/feed/vue-mastery" data-maxcols="3" data-layout="grid" data-poststyle="inline" data-readmore="Read the rest" data-buttonclass="btn btn-primary" data-offset="-100"></div>
             </section>
         </main>
+        <hr>
         <footer>
             © Copyright Mohammad Hisham Iqbal, 2020
         </footer>
