--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
         <hr>
         <footer>
             © Copyright Mohammad Hisham Iqbal, 2020
+            <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
         </footer>
     </body>
 </html>
