--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html id = "blog">
+<html>
     <head>
         <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body id = "blog">
         <header>
             <nav>
                 <ul>
