--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body id = "blog">
+    <body style="background-color:aquamarine;">
         <header>
             <nav>
                 <ul>
