--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
                 </div>
             </section>
             <section id="embed">
-                <div id="retainable-rss-embed" data-rss="https://medium.com/@hishamiqbal" data-maxcols="3" data-layout="grid" data-poststyle="inline" data-readmore="Read the rest" data-buttonclass="btn btn-primary" data-offset="-100"></div>
+                <div id="retainable-rss-embed" data-rss="https://medium.com/feed/@hishamiqbal" data-maxcols="3" data-layout="grid" data-poststyle="inline" data-readmore="Read the rest" data-buttonclass="btn btn-primary" data-offset="-100"></div>
             </section>
         </main>
         <hr>
