--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
             </section>
             <section id="embed">
                 <div id="retainable-rss-embed" 
-                data-rss="https://medium.com/feed/@hishamiqbal"
+                data-rss="https://medium.com/feed/@yashtekriwal"
                 data-maxcols="3" 
                 data-layout="grid" 
                 data-poststyle="inline" 
