--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
                 <div id="retainable-rss-embed" 
                 data-rss="https://medium.com/feed/@yashtekriwal"
                 data-maxcols="3" 
-                data-layout="grid" 
+                data-layout="slider" 
                 data-poststyle="inline" 
                 data-readmore="Read the rest" 
                 data-buttonclass="btn btn-primary" 
