--- a/about.html
+++ b/about.html
@@ -23,10 +23,9 @@
             </section>
             <hr>
         </main>
-        <footer>
-            © Copyright Mohammad Hisham Iqbal, 2020
-        </footer>
 	</body>
 	
-	
+	<footer id = "footer">
+        © Copyright Mohammad Hisham Iqbal, 2020
+    </footer>
 </html>
