--- a/blog.html
+++ b/blog.html
@@ -35,9 +35,9 @@
             </section>
         </main>
         <hr>
-        <footer>
-            © Copyright Mohammad Hisham Iqbal, 2020
-        </footer>
         <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
         </body>
+        <footer id = "footer">
+            © Copyright Mohammad Hisham Iqbal, 2020
+        </footer>
 </html>
