--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </main>
   </body>
   <hr>
-	<footer>
+	<footer id = "footer">
 		<p>Copyright 2020 Mohammad Hisham Iqbal</p>
 	  </footer>
 	  
