--- a/about.html
+++ b/about.html
@@ -59,15 +59,15 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Software Engineer Intern</h5>
+          <h5 class="experience-header">Data Analyst Summer Intern</h5>
           <div class="experience-details-container">
-          <p class="experience-details-item">Custom Ink</p> 
-          <p class="experience-details-item">Aug 2019 - Mar 2020</p>
-          <p class="experience-details-item">🌎 Remote</p> 
+          <p class="experience-details-item">U.S. Department of Transportation</p> 
+          <p class="experience-details-item">May 2018 - August 2018</p>
+          <p class="experience-details-item">🌎 Washington D.C.</p> 
           </div>
         </div>
         <div class="col-lg-6 col-sm-12">
-          <p>Continued working remotely while attending school. Developed production features using React, Ruby on Rails and leveraged tools such as New Relic to identify bottlenecks in the application.</p>
+          <p>Consolidated utilization of SAS by NHTSA and FRA leading to over $120,000 saved among the DOT • Implemented automated system to introduce consumers filing their own automobile safety hazards  • Created distributive models using AWS Sagemaker to compare automobile complaints filed to the DOT </p>
         </div>
       </div>
       <hr class="experience-horizontal-line"/>
