--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,7 @@
             </section>
             <section id="embed">
                 <div id="retainable-rss-embed" 
-    data-rss="https://medium.com/feed/retainable,
-     https://medium.com/feed/js-dojo, https://medium.com/feed/vue-mastery" 
+    data-rss="https://medium.com/feed/@hishamiqbal" 
      data-maxcols="4" 
      data-layout="slider" 
      data-poststyle="modal" 
