--- a/about.html
+++ b/about.html
@@ -1,112 +1,42 @@
+<!DOCTYPE html>
 <html>
-  <header>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-      <li><a href="/about">Experience</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav navbar-nav-default">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link nav-link-custom-active" href="experience.html">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container container-custom">
-      <div class="row">
-        <div class="col-lg-2 col-sm-12">
-          <div class="company-logo-container">
-            <img class="company-logo" src="./assets/ci_logo.jpg"/>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Data Analyst Summer Intern</h5>
-          <div class="experience-details-container">
-          <p class="experience-details-item">U.S. Department of Transportation</p> 
-          <p class="experience-details-item">May 2018 - August 2018</p>
-          <p class="experience-details-item">🌎 Washington D.C.</p> 
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <p>Consolidated utilization of SAS by NHTSA and FRA leading to over $120,000 saved among the DOT • Implemented automated system to introduce consumers filing their own automobile safety hazards  • Created distributive models using AWS Sagemaker to compare automobile complaints filed to the DOT </p>
-        </div>
-      </div>
-      <hr class="experience-horizontal-line"/>
-      <div class="row">
-        <div class="col-lg-2 col-sm-12">
-          <div class="company-logo-container">
-            <img class="company-logo" src="./assets/ci_logo.jpg"/>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Software Engineer Intern</h5>
-          <div class="experience-details-container">
-          <p class="experience-details-item">Custom Ink</p> 
-          <p class="experience-details-item">May 2019 - Aug 2019</p>
-          <p class="experience-details-item">🏢 Fairfax, VA</p> 
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <p>Joined a team working in a start-up like environment developing a new Custom Ink product. Worked on real production features using React, Ruby on Rails and third-party APIs. Wrote unit tests and tested my features in a staging environent before deploying to production.</p>
-        </div>
-      </div>
-      <hr class="experience-horizontal-line"/>
-      <div class="row">
-        <div class="col-lg-2 col-sm-12">
-          <div class="company-logo-container">
-            <img class="company-logo" src="./assets/pf_logo.png"/>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Software Engineer Intern</h5>
-          <div class="experience-details-container">
-          <p class="experience-details-item">Panafold</p> 
-          <p class="experience-details-item">May 2018 - Aug 2018</p>
-          <p class="experience-details-item">🏢 San Francisco, CA</p> 
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <p>Spend the summer working with a team developing a software platform to enable better collaboration between architects and their clients. Used Node, Express, and Redis to create a server middleware to intercept HTTP requests and update users in real-time via the WebSocket protocol. Created reusable React components to display the real-time data to the user across an Electron desktop application.</p>
-        </div>
-      </div>
-      <hr class="experience-horizontal-line"/>
-      <div class="row">
-        <div class="col-lg-2 col-sm-12">
-          <div class="company-logo-container">
-            <img class="company-logo" src="./assets/lcl_logo.jpeg"/>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Software Engineer Intern</h5>
-          <div class="experience-details-container">
-          <p class="experience-details-item">Life Changing Labs Incubator</p> 
-          <p class="experience-details-item">May 2017 - Aug 2017</p>
-          <p class="experience-details-item">🏢 Ithaca, NY</p> 
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <p>Part of the "Life Changing Labs" summer incubator at Cornell University by joining an early stage startup building smart mechanical furniture. Created a web application using React, Redux, and an Express server integrated with GraphQL to enable users to pre-order the product from the company. Developed a React Native mobile application that would be later used to interact with the hardware prototype.</p>
-        </div>
-      </div>
-    </div>
-    <div id="footer-container">
-      <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
-    </div>
-  </body>
+    <head>
+        <title>Hisham Iqbal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body style="background-color:rgba(146, 163, 161, 0.836);">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+	        		<li><a href="/about">Experience</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="hero">
+                <div class="section-inner">
+                    <h1>My Musings</h1>
+                    <hr>
+                </div>
+            </section>
+            <section id="embed">
+                <div id="retainable-rss-embed" 
+    data-rss="https://medium.com/feed/@hishamiqbal" 
+     data-maxcols="4" 
+     data-layout="slider" 
+     data-poststyle="modal" 
+     data-readmore="Read the rest" 
+     data-buttonclass="btn btn-primary" 
+     data-offset="-200">&#160;</div>
+            </section>
+        </main>
+        <hr>
+        <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+        </body>
+        <footer id = "footer">
+            © Copyright Mohammad Hisham Iqbal, 2020
+        </footer>
 </html>
