--- a/index.html
+++ b/index.html
@@ -46,9 +46,21 @@
 			</p>
         </main>
         <hr>
-	<div id="footer-container">
-    <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
-  </div>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
+</style>
+        <div class="footer">
+          <p>Footer</p>
+        </div>
   </body>
 </html>
 
