--- a/index.html
+++ b/index.html
@@ -45,22 +45,13 @@
 				  </div>
 			</p>
         </main>
+        
         <hr>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: red;
-   color: white;
-   text-align: center;
-}
-</style>
-        <div class="footer">
-          <p>Footer</p>
-        </div>
+        <div class="wrapper">
+          <footer class="page-footer">Sticky footer</footer>
+      </div>
+      
   </body>
 </html>
 
