--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         
         <hr>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <div class="wrapper">
-          <footer class="page-footer">Sticky footer</footer>
-      </div>
+        <footer class="site-footer">
+          I'm the Sticky Footer.
+        </footer>
       
   </body>
 </html>
