--- a/about.html
+++ b/about.html
@@ -1,42 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hisham Iqbal</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body style="background-color:rgba(146, 163, 161, 0.836);">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-	        		<li><a href="/about">Experience</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="hero">
-                <div class="section-inner">
-                    <h1>My Musings</h1>
-                    <hr>
-                </div>
-            </section>
-            <section id="embed">
-                <div id="retainable-rss-embed" 
-    data-rss="https://medium.com/feed/@hishamiqbal" 
-     data-maxcols="4" 
-     data-layout="slider" 
-     data-poststyle="modal" 
-     data-readmore="Read the rest" 
-     data-buttonclass="btn btn-primary" 
-     data-offset="-200">&#160;</div>
-            </section>
-        </main>
-        <hr>
-        <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
-        </body>
-        <footer id = "footer">
-            © Copyright Mohammad Hisham Iqbal, 2020
-        </footer>
-</html>
+<div class="page-wrap">
+  
+  Content!
+      
+</div>
+
+<footer class="site-footer">
+  I'm the Sticky Footer.
+</footer>
