--- a/about.html
+++ b/about.html
@@ -1,9 +1,19 @@
-<div class="page-wrap">
-  
-  Content!
-      
-</div>
-
-<footer class="site-footer">
-  I'm the Sticky Footer.
-</footer>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hisham Iqbal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body style="background-color:rgba(146, 163, 161, 0.836);">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+	        		<li><a href="/about">Experience</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        </body>
+        </html>
