--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@
     Business Website
   </title>
   <link href="style.css" rel= "stylesheet" type="text/css">
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+
+
+
 <body>
-  <header>
-    <div class="row">
-      <div class ="logo">
-        <img src = "images/icon.png">
+  <header class ="header">
+    <nav class ="navbar navbar-style">
+      <div class ="containter">
+        <div class="navbar-header">
+          <a href =""><img class="logo" src = "images/icon.png"></a>
+        </div>
       </div>
-      <ul class = "main-nav">
-        <li class="active"><a href=""> HOME </a></li>
-        <li><a href=""> INFO </a></li>
-        <li><a href=""> BLOG </a></li>
-        <li><a href=""> CONTACT </a></li>
-
-      </ul>
-    </div>
-
-
-    <div class = "hero">
-      <h1>Welcome to Hisham Iqbal!</h1>
-
-      <div class="button">
-        <a href=""class="btn btn-one"> Watch Video</a>
-        <a href=""class="btn btn-two"> Calendly</a>
-      </div>
-    </div>
+    </nav>
   </header>
 </body>
 </html>
