--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
 
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="">Home</a></li>
           <li><a href="">Experiences</a></li>
           <li><a href="">Projects</a></li>
