--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
 
       <div class="container">
         <div class ="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 banner-info">
             <h1>Welcome To</h1>
-            <p>Hisham Iqbal's</p>
+            <p class="big-text">Hisham Iqbal's</p>
             <p>Personal Website</p>
+            <a class="btn btn-first" href="#">About Me</a>
+            <a class="btn btn-second" href="#">Schedule Me</a>
           </div>
           
-          <div class="col-sm-6">
+          <div class="col-sm-6 banner-image">
             <img src="/images/coffee.jpg" class="img-responsive">
           </div>
 
