--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
 
-        <ul class="nav navbar-nav navbar-center">
+        <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="/experience">Experiences</a></li>
           <li><a href="/projects">Projects</a></li>
