--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     <div class="wrapper">
       <article class="img-info">
         <h2>Yay!</h2>
-        <p>Hello!!asdlhjlhajlksdfhlka haljsdfhlaksjdfhlakjsdfhjlkahsdfklhjasdf ljhadflkjahsdklfhjaklsdfhalkjsf alfdhakljsdfhalkjhfdalkj afdlkjhajhsdf</p>
+        <p>Hello!!asdlhjlhajlksdfhlka haljsdfhlaksjdfhlakjsdfhjlkahsdfklhjasdf</p>
+        <p>ljhadflkjahsdklfhjaklsdfhalkjsf alfdhakljsdfhalkjhfdalkj afdlkjhajhsdf</p>
       </article>
+      <img src="/image/coffee.jpg" alt="Hisham Iqbal">
     </div>
 
       <div class="container">
