--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       </div>
     </nav>
 
-    <img src="/image/background.jpg" alt="mmtuts banner">
+    <img src="/images/background.jpg" alt="mmtuts banner">
     <div class="wrapper">
       <article class="img-info">
         <h2>Yay!</h2>
         <p>Hello!!asdlhjlhajlksdfhlka haljsdfhlaksjdfhlakjsdfhjlkahsdfklhjasdf</p>
         <p>ljhadflkjahsdklfhjaklsdfhalkjsf alfdhakljsdfhalkjhfdalkj afdlkjhajhsdf</p>
       </article>
-      <img src="/image/coffee.jpg" alt="Hisham Iqbal">
+      <img src="/images/coffee.jpg" alt="Hisham Iqbal">
     </div>
 
       <div class="container">
