--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
 
-    <img src="/images/background.jpg" alt="mmtuts banner">
+    <img src="/images/background.jpg" alt="mmtuts banner" class="img-responsive">
     <div class="wrapper">
       <article class="img-info">
         <h2>Yay!</h2>
