--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
         <div class ="row">
           <div class="col-sm-6 banner-info">
             <h1>Welcome To</h1>
-            <p class="big-text">Hisham Iqbal's</p>
+            <p class="big-text">Hish</p>
             <p>Personal Website</p>
             <a class="btn btn-first" href="#">About Me</a>
             <a class="btn btn-second" href="#">Schedule Me</a>
