--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
 
       <div class="container">
         
-        <div class="col-sm-6 banner-image">
+        <div class="company">
           <img src="/images/EY.png" class="img-responsive">
           <h1>Forensic Analyst Intern</h1>
         </div>
