--- a/experience.html
+++ b/experience.html
@@ -49,8 +49,8 @@
       <div class="container">
         
         <div class="company">
-          <img src="/images/EY.png" class="img-responsive">
-          <h1>Forensic Analyst Intern</h1>
+          <img src="/images/EY.png" class="img-responsive" height= "75" width="235" style="float:left;">
+          <h1 style="float:right;">Forensic Analyst Intern</h1>
         </div>
         
         <div class ="row">
