--- a/experience.html
+++ b/experience.html
@@ -48,12 +48,13 @@
 
     <div class="container">
       <div class ="row">
-
-        <div class="col-sm-6 banner-image">
-          <img src="/images/EY.png" class="img-responsive" height= "75" width= "75">
-          <p>Personal Website</p>
+        <div class ="row">
+          <div class="col-sm-6 banner-image">
+            <img src="/images/EY.png" class="img-responsive" height= "75" width= "75">
+            <p>Personal Website</p>
+          </div>
         </div>
-
+        
         <div class="col-sm-6 banner-info">
           <h1>Welcome To</h1>
           <p class="big-text">Hisham Iqbal's</p>
